--- a/index.html
+++ b/index.html
@@ -36,6 +36,26 @@
       <h1>Play traditional game</h1>
       <h3>Experience the new traditional game play</h3>
       <a href="" class="button-cta">Play now</a>
+      <div class="story">
+        <div class="story-text">the story</div>
+        <div class="svg">
+          <svg
+            width="23"
+            height="11"
+            viewBox="0 0 23 11"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M21.5786 1.83374H1.32422L11.338 10.0029L21.5786 1.83374Z"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
+          </svg>
+        </div>
+      </div>
     </section>
     <main class="container">
       <section class="usp">
