revise things little bit

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         </div>
       </nav>
     </header>
+    <!-- hero--------------------- -->
+    <!-- ------------------- -->
     <section class="hero">
       <h1>Play traditional game</h1>
       <h3>Experience the new traditional game play</h3>
@@ -58,6 +60,8 @@
       </div>
     </section>
     <main class="container">
+      <!--about--------------------- -->
+      <!-- ------------------- -->
       <section class="usp">
         <div class="usp__text">
           <h3>What's so special?</h3>
@@ -162,7 +166,7 @@
               </div>
             </div>
             <div class="card-text">
-              <p>One of my gaming highligts of the year</p>
+              <p>"One of my gaming highligts of the year"</p>
             </div>
             <div class="card-date"><p>June18, 2021</p></div>
           </div>
@@ -177,8 +181,8 @@
                   <div class="card-img2"></div>
                 </div>
                 <div class="card-name">
-                  <p>Evan Lathi</p>
-                  <p>PC Gamer</p>
+                  <p>Jada Griffin</p>
+                  <p>Nerdreactor</p>
                 </div>
               </div>
               <div class="card-header-right">
@@ -198,9 +202,12 @@
               </div>
             </div>
             <div class="card-text">
-              <p>One of my gaming highligts of the year</p>
+              <p>
+                “The next big thing in the world of streaming and survival
+                games.”
+              </p>
             </div>
-            <div class="card-date"><p>June18, 2021</p></div>
+            <div class="card-date"><p>July 10, 2021</p></div>
           </div>
           <div class="card" style="margin-bottom: 30px">
             <div class="card-header">
@@ -234,9 +241,12 @@
               </div>
             </div>
             <div class="card-text">
-              <p>One of my gaming highligts of the year</p>
+              <p>
+                “Snoop Dogg Playing The Wildly Entertaining ‘SOS’ Is
+                Ridiculous.”
+              </p>
             </div>
-            <div class="card-date"><p>June18, 2021</p></div>
+            <div class="card-date"><p>December 4, 2018</p></div>
           </div>
         </div>
       </section>
