fix url to imgs

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <div class="card-img-container">
                   <div
                     class="card-img"
-                    style="background-image: url('/Assets/image.jpg')"
+                    style="background-image: url('Assets/image.jpg')"
                   ></div>
                   <div class="card-img2"></div>
                 </div>
@@ -215,7 +215,7 @@
                 <div class="card-img-container">
                   <div
                     class="card-img"
-                    style="background-image: url('/Assets/image3.jpg')"
+                    style="background-image: url('Assets/image3.jpg')"
                   ></div>
                   <div class="card-img2"></div>
                 </div>
@@ -361,5 +361,6 @@
         </ul>
       </div>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
