implement image slider

--- a/index.html
+++ b/index.html
@@ -69,7 +69,20 @@
           <h1>The games</h1>
           <p>what's so special</p>
         </div>
-        <img src="/Assets/rockpaperstrategy-1600.jpg" alt="" />
+        <section class="container-slider">
+          <div class="slider-wrapper">
+            <div class="slider">
+              <img src="Assets/rockpaperstrategy-1600.jpg" alt="" id="slide1" />
+              <img src="Assets/bg_features.png" alt="" id="slide2" />
+              <img src="Assets/the-games-bg.jpg" alt="" id="slide3" />
+            </div>
+            <div class="slider-nav">
+              <a href="#slide1"></a>
+              <a href="#slide2"></a>
+              <a href="#slide3"></a>
+            </div>
+          </div>
+        </section>
       </div>
     </section>
 
