--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="main-menu-items">
           <ul class="main-menu-list">
             <li><a href="#Home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#features">Features</a></li>
-            <li><a href="#system">System requirement</a></li>
-            <li><a href="#Signup">Sign up</a></li>
+            <li><a href="#about">Work</a></li>
+            <li><a href="#features">Contact</a></li>
+            <li><a href="#system">About me</a></li>
+            <li><a href="#Signup" class="signup">Sign up</a></li>
             <li><a href="#login">Login</a></li>
           </ul>
         </div>
