--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
           <h1>Play traditional games</h1>
           <p>explore new traditional game play</p>
           <a href="" class="btn btn-hero">Play now</a>
+          <div class="story">
+            <div class="story-text">the story</div>
+            <div class="svg">
+              <svg
+                width="23"
+                height="11"
+                viewBox="0 0 23 11"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M21.5786 1.83374H1.32422L11.338 10.0029L21.5786 1.83374Z"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
         </div>
         <img src="" alt="" />
       </div>
